[metadata]
name = prismtracker
version = 1.0.0
author = Philip J Freeman
author_email = elektron@halo.nu
description = An APRS tracker daemon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://k6fsm.net/prismtracker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aprslib >= 0.6.47
    gpsd-py3 >= 0.3.0
    gpxpy >= 1.4.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prismtracker = prismtracker.tracker:main
